# noisefunge-legacy

./: README.md  noisefunge.cabal  noisefunge.env  test.cfg
demos/buffers/: hello.nf  rundemo.sh  world.nf
demos/drums/: drums.nf  rundemo.sh
demos/execute/: exec1.nf  exec2.nf  exec3.nf  rundemo.sh
demos/forks/: fork.nf
demos/functions/: beat.nf  fnreader.nf  fnwriter.nf  k.nf  rundemo.sh
demos/mem/: swapper.nf
funged/: funged.hs
nfkill/: nfkill.hs
nfloader/: nfloader.hs
nfops/: nfops.hs
nfreset/: nfreset.hs
nftop/: nftop.hs
nfviewer/: Tiler.hs  nfviewer.hs
src/Language/: NoiseFunge.hs
src/Language/NoiseFunge/: ALSA.hs  API.hs  Beat.hs  Befunge.hs  Engine.hs  Note.hs  Server.hs
src/Language/NoiseFunge/Befunge/: Operator.hs  Process.hs  VM.hs
src/Language/NoiseFunge/Server/: Comm.hs
